admission/validatingAdmissionPolicies/policies/privileged/initcontainers/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: privileged-initcontainers-namespace-optout-warn-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: c1aacfa1-05e7-5e41-b5fe-8e62a643ec0b
  labels:
    privileged-initcontainers.security.kolteq.com/warn: 'false - true'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    privileged-initcontainers.security.kolteq.com/audit: 'false - true'
    privileged-initcontainers.security.kolteq.com/enforce: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: privileged-initcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/warn
        operator: In
        values:
        - baseline
        - restricted
      - key: privileged-initcontainers.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: privileged-initcontainers-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: c1aacfa1-05e7-5e41-b5fe-8e62a643ec0b
  labels:
    privileged-initcontainers.security.kolteq.com/warn: 'false - true'
    security.kolteq.com/warn: enabled
    privileged-initcontainers.security.kolteq.com/audit: 'false - true'
    privileged-initcontainers.security.kolteq.com/enforce: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
spec:
  policyName: privileged-initcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: privileged-initcontainers.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: privileged-initcontainers-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: c1aacfa1-05e7-5e41-b5fe-8e62a643ec0b
  labels:
    privileged-initcontainers.security.kolteq.com/warn: 'false - true'
    privileged-initcontainers.security.kolteq.com/audit: 'false - true'
    privileged-initcontainers.security.kolteq.com/enforce: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: privileged-initcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: privileged-initcontainers.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: privileged-initcontainers-namespace-optout-audit-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: c1aacfa1-05e7-5e41-b5fe-8e62a643ec0b
  labels:
    privileged-initcontainers.security.kolteq.com/audit: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    privileged-initcontainers.security.kolteq.com/enforce: 'false - true'
    privileged-initcontainers.security.kolteq.com/warn: 'false - true'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: privileged-initcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/audit
        operator: In
        values:
        - baseline
        - restricted
      - key: privileged-initcontainers.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: privileged-initcontainers-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: c1aacfa1-05e7-5e41-b5fe-8e62a643ec0b
  labels:
    privileged-initcontainers.security.kolteq.com/audit: 'false - true'
    security.kolteq.com/audit: enabled
    privileged-initcontainers.security.kolteq.com/enforce: 'false - true'
    privileged-initcontainers.security.kolteq.com/warn: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: privileged-initcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: privileged-initcontainers.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: privileged-initcontainers-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: c1aacfa1-05e7-5e41-b5fe-8e62a643ec0b
  labels:
    privileged-initcontainers.security.kolteq.com/audit: 'false - true'
    privileged-initcontainers.security.kolteq.com/enforce: 'false - true'
    privileged-initcontainers.security.kolteq.com/warn: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: privileged-initcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: privileged-initcontainers.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: privileged-initcontainers-namespace-optout-deny-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: c1aacfa1-05e7-5e41-b5fe-8e62a643ec0b
  labels:
    privileged-initcontainers.security.kolteq.com/enforce: 'false - true'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    privileged-initcontainers.security.kolteq.com/audit: 'false - true'
    privileged-initcontainers.security.kolteq.com/warn: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: privileged-initcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/enforce
        operator: In
        values:
        - baseline
        - restricted
      - key: privileged-initcontainers.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: privileged-initcontainers-namespace-optout-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: c1aacfa1-05e7-5e41-b5fe-8e62a643ec0b
  labels:
    privileged-initcontainers.security.kolteq.com/enforce: 'false - true'
    security.kolteq.com/enforce: enabled
    privileged-initcontainers.security.kolteq.com/audit: 'false - true'
    privileged-initcontainers.security.kolteq.com/warn: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: privileged-initcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: privileged-initcontainers.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: privileged-initcontainers-namespace-optin-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: c1aacfa1-05e7-5e41-b5fe-8e62a643ec0b
  labels:
    privileged-initcontainers.security.kolteq.com/enforce: 'false - true'
    privileged-initcontainers.security.kolteq.com/audit: 'false - true'
    privileged-initcontainers.security.kolteq.com/warn: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: privileged-initcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: privileged-initcontainers.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
