admission/validatingAdmissionPolicies/policies/privileged/initcontainers/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: privileged-initcontainers
  annotations:
    security.kubeapt.io/displayName: Privileged
    security.kubeapt.io/description: ValidatingAdmissionPolicy for privileged/initcontainers.
    security.kubeapt.io/resource: Initcontainers
    security.kubeapt.io/severity: medium
    security.kubeapt.io/remediation: Adjust workloads to satisfy the privileged/initcontainers policy.
    policies.kolteq.com/validatingAdmissionPolicy: c1aacfa1-05e7-5e41-b5fe-8e62a643ec0b
  labels:
    privileged-initcontainers.security.kolteq.com/audit: 'false - true'
    privileged-initcontainers.security.kolteq.com/enforce: 'false - true'
    privileged-initcontainers.security.kolteq.com/warn: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
  validations:
    - expression: >
        (has(object.spec.os) &&
         has(object.spec.os.name) &&
         object.spec.os.name.lowerAscii() == "windows") ||
        !has(object.spec.initContainers) ||
        object.spec.initContainers.all(c,
          !has(c.securityContext) ||
          !has(c.securityContext.privileged) ||
          c.securityContext.privileged == false
        )
      message: >
        Privileged initContainers are disallowed. All
        spec.initContainers[*].securityContext.privileged must be undefined or false.
